Bug 169988 - youtube quicklist not rendered
Summary: youtube quicklist not rendered
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.1.0
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-28 17:06 UTC by Adrian von Bidder
Modified: 2008-10-03 02:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrian von Bidder 2008-08-28 17:06:41 UTC
Version:            (using KDE 4.1.0)
Installed from:    Debian testing/unstable Packages

The quicklist in youtube does not appear.

Not sure if its a rendering issue or if the "plus" buttons do not actually add the video to the quicklist and the list is not rendered because its empty.

konqueror is 4:4.1.0-1 from Debian experimental, to be exact.
Comment 1 Maksim Orlovich 2008-08-28 18:14:39 UTC
Sorry, but could you please explain what the quicklist is?
Comment 2 Adrian von Bidder 2008-08-29 07:42:53 UTC
Open youtube with, e.g., firefox.  In the list of "related videos", each video has a little "+" sign on the bottom left, which, when it is clicked, adds the video to the "QuickList", which is a box above to and rendered identically like the "Related Videos" box.

(Just tested with Konq 3.5.9, and it doesn't work either, so this is not a regression.)
Comment 3 FiNeX 2008-08-29 16:03:26 UTC
I can confirm this bug.
Comment 4 FiNeX 2008-08-29 16:03:34 UTC
I can confirm this bug.
Comment 5 Maksim Orlovich 2008-08-29 19:37:03 UTC
Needs blur() on a random element. I guess I should add it to HTMLElement, websites all over the place seem to be using this (non-standard) feature.
Comment 6 Maksim Orlovich 2008-10-03 02:29:35 UTC
Fixed by: http://lists.kde.org/?l=kde-commits&m=122299360203537&w=2