Support focus/blur on all elements (likely mozilla extension), used by Youtube quicklist

BUG: 169988

svn path=/branches/KDE/4.1/kdelibs/; revision=867176