khtml/xml/dom_elementimpl.cpp
@@ -1269,6 +1269,17 @@ RenderStyle* ElementImpl::computedStyle()
     return rd->m_computedStyle;
 }
 
+void ElementImpl::blur()
+{
+    if(document()->focusNode() == this)
+        document()->setFocusNode(0);
+}
+
+void ElementImpl::focus()
+{
+    document()->setFocusNode(this);
+}
+
 // -------------------------------------------------------------------------
 
 XMLElementImpl::XMLElementImpl(DocumentImpl *doc, NodeImpl::Id id)
